--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-PATH_TO_CONFIG=src/configs/all.js
-PATH_TO_TEMPLATES=src/templates/html/bootstrap/v4/
+# see /src/settings/*.js
+# the path is relative to /src/app.js
+PATH_TO_SETTING_TEMPLATE=./settings/allFeatures.js
+
+# see /src/templates/html/*.js
+# the path is relative to /src/app.js
+PATH_TO_VIEW_TEMPLATE=./templates/html/bootstrap/v4_5/templates.js
