--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-chime-client-backbone",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "AWS Chime Backbone webclient.",
   "author": "Tomas Jurman <tomasjurman@gmail.com> (https://github.com/Kibo)",
   "repository": {
@@ -8,22 +8,22 @@
     "url": "git@github.com:Kibo/aws-chime-backbone-client.git"
   },
   "license": "MIT",
+  "private": true,
   "dependencies": {
     "aws-sdk": "^2.851.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lit-html": "^1.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/preset-env": "^7.13.5",
-    "grunt": "^1.0.4",
-    "grunt-babel": "^8.0.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-cssmin": "^4.0.0",
-    "grunt-contrib-less": "^3.0.0",
-    "grunt-contrib-uglify": "^5.0.0",
-    "load-grunt-tasks": "^5.1.0"
+    "clean-webpack-plugin": "^3.0.0",
+    "dotenv-webpack": "^6.0.2",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   },
-  "scripts": {}
+  "scripts": {
+    "build": "webpack",
+    "start": "node server.js",
+    "patch": "npm version patch"
+  }
 }
