--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 PATH_TO_SETTING_TEMPLATE=./settings/allFeatures.js
 
 # the path is relative to /src/app.js
-PATH_TO_VIEW_TEMPLATE=./templates/html/bootstrap/v4_5/templates.js
+PATH_TO_VIEW_TEMPLATES=./templates/html/bootstrap/v4_5
