--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.851.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "lit-html": "^1.3.0",
+    "path": "^0.12.7",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "dotenv-webpack": "^6.0.2",
+    "ejs-compiled-loader": "^3.0.0",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
   },
