--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "dependencies": {
     "amazon-chime-sdk-js": "^2.5.0",
@@ -13,16 +14,21 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "uuid": "^3.3.2",
-    "vue": "^3.0.0-beta.3"
+    "vue": "^3.0.7"
   },
   "devDependencies": {
+    "@vue/babel-preset-app": "^4.5.11",
     "@vue/compiler-sfc": "^3.0.0-beta.3",
+    "@vue/test-utils": "^2.0.0-rc.3",
+    "babel-jest": "^26.6.3",
     "css-loader": "^3.5.2",
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "ts-jest": "^24.3.0",
     "url-loader": "^4.1.0",
+    "vue-jest": "^5.0.0-alpha.7",
     "vue-loader": "^16.0.0-alpha.3",
     "vue-style-loader": "^4.1.2",
     "webpack": "^4.42.1",
