--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "path": "^0.12.7",
     "uuid": "^3.3.2",
     "vue": "^3.0.7"
@@ -26,7 +27,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "ts-jest": "^24.3.0",
+    "typescript": "^4.2.3",
     "url-loader": "^4.1.0",
     "vue-jest": "^5.0.0-alpha.7",
     "vue-loader": "^16.0.0-alpha.3",
