--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# the path is relative to /src/app.js
-PATH_TO_SETTING_TEMPLATE=./settings/allFeatures.js
+# @see /src/profiles
+SETTING_PROFILE_FILE_NAME=allFeatures.js
 
-# the path is relative to /src/app.js
-PATH_TO_VIEW_TEMPLATES=./templates/html/bootstrap/v4_5
