--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jest": "^26.6.3",
     "path": "^0.12.7",
     "uuid": "^3.3.2",
-    "vue": "^3.0.7"
+    "vue": "^3.0.7",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/babel-preset-app": "^4.5.11",
