--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "path": "^0.12.7",
-    "pdfjs-dist": "^2.7.570",
+    "pdfjs-dist": "2.6.347",
     "uuid": "^3.3.2",
     "vue": "^3.0.7",
     "vuex": "^4.0.0"
@@ -35,7 +35,8 @@
     "vue-loader": "^16.0.0-alpha.3",
     "vue-style-loader": "^4.1.2",
     "webpack": "^4.42.1",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "worker-loader": "3.0.8"
   },
   "version": "0.1.0",
   "name": "aws-chime-client",
