--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "^26.6.3",
     "path": "^0.12.7",
     "pdfjs-dist": "2.6.347",
+    "socket.io-client": "^4.0.1",
     "uuid": "^3.3.2",
     "vue": "^3.0.7",
     "vuex": "^4.0.0"
