--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "webpack",
+    "pack": "webpack --env prod=production",
     "start": "node server.js",
     "test": "jest"
   },
@@ -39,7 +40,7 @@
     "webpack-cli": "^4.5.0",
     "worker-loader": "3.0.8"
   },
-  "version": "0.1.0",
+  "version": "0.9.0",
   "name": "aws-chime-client",
   "description": "AWS Chime Backbone webclient.",
   "author": "Tomas Jurman <tomasjurman@gmail.com> (https://github.com/Kibo)",
